@@ -4,6 +4,8 @@ Version 0.2-8 -- July 6, 2012
     * mbind2: inner set is based on x+y instead of left join x.
       Methods for matrix and sparse matrix classes, but not for
       Mefa where the sum is not trivial.
+    * nonDuplicated gained na.rm argument to handle 
+      possible duplicates in row names.
 
 Version 0.2-7 -- May 2, 2012
     * inst/COPYING removed.
